Current state of the paper (worked on the first half). Going for coffee, keeping locks.

--- a/documents/WCSS2008Paper/master.bib
+++ b/documents/WCSS2008Paper/master.bib
@@ -32,6 +32,18 @@
   url = {http://www.citebase.org/abstract?id=oai:arXiv.org:0709.4242}
 }
 
+@ARTICLE{luke2005,
+  author = {Sean Luke and Claudio Cioffi-Revilla and Liviu Panait and Keith Sullivan
+	and Gabriel Balan},
+  title = {{MASON: A Multiagent Simulation Environment}},
+  journal = {Simulation},
+  year = {2005},
+  volume = {81},
+  pages = {517-525},
+  owner = {Maciek},
+  timestamp = {2007.03.14}
+}
+
 @ARTICLE{westerhoff2004,
   author = {Westerhoff, Frank H.},
   title = {{Multiasset Market Dynamics}},
